@@ -14,6 +14,7 @@ Changelog
  * The wagtailimages.Filter model has been removed, and converted to a Python class instead (Gagaro)
  * Multiple ChooserBlocks inside a StreamField are now prefetched in bulk, for improved performance (Michael van Tellingen, Roel Bruggink, Matt Westcott)
  * Add new EmailBlock and IntegerBlock (Oktay Altay)
+ * Added a new FloatBlock, DecimalBlock and a RegexBlock (Oktay Altay, Andy Babic)
  * Fix: Email templates and document uploader now support custom `STATICFILES_STORAGE` (Jonny Scholes)
  * Fix: Removed alignment options (deprecated in HTML and not rendered by Wagtail) from `TableBlock` context menu (Moritz Pfeiffer)
  * Fix: Fixed incorrect CSS path on ModelAdmin's "choose a parent page" view
